unpackaged/main/default/objects/Fake_Report_Data_Object__c/Fake_Report_Data_Object__c.object-meta.xml
<CustomObject>
    <description>What: Used by Dashboard Magic for Analytics Tool. DO NOT REMOVE/CHANGE.</description>
    <label>Fake Report Data</label>
    <nameField>
        <displayFormat>FK-{0000}</displayFormat>
        <label>Fake Report Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fake Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>