unpackaged/main/default/objects/Fake_Report_Data_Object__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Customers won&#39;t see this value, it&#39;s just something to associate all the values together so they show up on the same report</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>