unpackaged/main/default/objects/Fake_Report_Data_Object__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Primary Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>