unpackaged/main/default/objects/Fake_Report_Data_Object__c/fields/Secondary_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Grouping__c</fullName>
    <label>Secondary Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>