unpackaged/main/default/objects/Fake_Report_Data_Object__c/listViews/All_Fakes.listView-meta.xml
<ListView>
    <fullName>All_Fakes</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Label__c</columns>
    <columns>Secondary_Grouping__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fakes</label>
</ListView>